name:                 poker-hh
version:              0.1.0.0
synopsis:             
-- description:
-- license:
-- license-file:
homepage:             
author:               Eitan Sternlicht
maintainer:           eitanoffun@gmail.com
category:             
-- copyright:
build-type:           Simple
-- extra-source-files:
cabal-version:        >=1.10

executable poker-hh
  hs-source-dirs:       src
  main-is:              Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  -- other-modules:
  -- other-extensions:
  build-depends:         base >= 4.7 && < 5
                       , wreq
                       , lens
                       , bytestring
                       , containers
                       , aeson
                       , lens-aeson
                       , text
                       , unordered-containers
  default-language:     Haskell2010
